--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.6.8",
     "firebase": "^10.12.5",
